# nq-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  api.json  deno.json  docker-compose.yml  dumper.py  import_map.json  main.ts  model.conf  open-api.json  open-api.yml
.github/: FUNDING.yml
.github/workflows/: coverage.yml  deno.yml  docker-image.yml  docker-publish.yml  rust.yml
auth/: Cargo.toml
auth/src/: lib.rs
authN/: Cargo.toml
authN/src/: lib.rs
authZ/: Cargo.toml
authZ/src/: lib.rs  middleware.rs
auth_macros/: Cargo.toml
auth_macros/src/: lib.rs
config/: access.conf
controllers/: mod.ts
controllers/account/: account.ts  account_test.ts  token.ts
controllers/quran/: quran.ts
controllers/status/: status.ts
lib/: app.ts  controller.ts  customError.ts  db.ts  log.ts  middlewares.ts  mod.ts  router.ts  salt.ts  schema.ts  server.ts  unsafe.ts
lib/test/: controller_test.ts  log_test.ts  middlewares_test.ts  mod.ts  salt_test.ts  schema_test.ts  server_test.ts
migrations/00000000000001_create_app_accounts/: up.sql
migrations/00000000000002_create_app_user/: down.sql  up.sql
migrations/00000000000002_create_mushaf/: up.sql
migrations/00000000000002_create_quran_surahs/: up.sql
migrations/00000000000003_create_mushaf/: up.sql
migrations/00000000000003_create_quran_surahs/: up.sql
migrations/00000000000004_create_quran_surahs/: up.sql
migrations/2022-10-21-123628_create_app_verify_code/: down.sql  up.sql
migrations/2022-10-24-095557_create_app_user/: down.sql  up.sql
migrations/2022-10-25-070029_create_app_token/: down.sql  up.sql
migrations/2022-10-27-100046_create_quran_text/: down.sql  up.sql
migrations/2022-12-21-142008_create_app_emails/: down.sql  up.sql
migrations/2022-12-27-171201_create_app_organizations/: down.sql  up.sql
migrations/2023-01-08-071401_create_app_accounts/: down.sql  up.sql
models/: log.ts  mod.ts  quranSura.ts  quranSurah.ts  quranText.ts  token.ts  user.ts  verifyCode.ts
scripts/: quran_parser.py  single_migration.py
scripts/quran_parser/: quran_parser.py
src/: authz.rs  datetime.rs  diff.rs  difference.rs  email.rs  error.rs  macros.rs  main.rs  models.rs  query_validator.rs  routers.rs  schema.rs  select_model.rs  test.rs  token_checker.rs  validate.rs
(+207 files in other folders)
