[package]
name = "nq-api"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { path="./auth" }
actix-web = "4"
actix-cors = "0.6.4"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
chrono = "0.4"
lettre = { version = "0.10.1", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
validator = { version = "0.16.0", features = ["derive"] }