[package]
name = "nq-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "auth", "auth_macros"]

[dependencies]
env_logger = "0.10.0"
auth = { path="auth" }
auth_macros = { path="auth_macros" }
actix-web = "4"
actix-cors = "0.6.4"
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "chrono", "uuid"] }

# casbin adapter
diesel-adapter = { version = "0.9.0", features = ["postgres"] }
uuid = { version = "1.3.3", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
chrono = {version = "0.4", features = ["serde"]}
lettre = { version = "0.10.1", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
validator = { version = "0.16.0", features = ["derive"] }
diesel_migrations = "2.0.0"
async-trait = "0.1.68"
